<resources>
    <string name="app_name">Math Game</string>
    <string name="elegirjuego">Choose Game</string>
    <string name="euNotice">Privacy Policy</string>
    <string name="home1">Multiplication Game</string>
    <string name="home2">Division Game</string>
    <string name="home3">Addition Game</string>
    <string name="home4">Subtraction Game</string>
    <string name="home5">The Tables</string>
    <string name="juegomezclado">Math Game</string>
    <string name="moreInfo">More Info</string>
    <string name="siguiente">Next</string>
    <string name="tabla10di">÷ 10</string>
    <string name="tabla10mu">X 10</string>
    <string name="tabla10re">– 10</string>
    <string name="tabla10su">+ 10</string>
    <string name="tabla1di">÷ 1</string>
    <string name="tabla1mu">X 1</string>
    <string name="tabla1re">– 1</string>
    <string name="tabla1su">+ 1</string>
    <string name="tabla2di">÷ 2</string>
    <string name="tabla2mu">X 2</string>
    <string name="tabla2re">– 2</string>
    <string name="tabla2su">+ 2</string>
    <string name="tabla3di">÷ 3</string>
    <string name="tabla3mu">X 3</string>
    <string name="tabla3re">– 3</string>
    <string name="tabla3su">+ 3</string>
    <string name="tabla4di">÷ 4</string>
    <string name="tabla4mu">X 4</string>
    <string name="tabla4re">– 4</string>
    <string name="tabla4su">+ 4</string>
    <string name="tabla5di">÷ 5</string>
    <string name="tabla5mu">X 5</string>
    <string name="tabla5re">– 5</string>
    <string name="tabla5su">+ 5</string>
    <string name="tabla6di">÷ 6</string>
    <string name="tabla6mu">X 6</string>
    <string name="tabla6re">– 6</string>
    <string name="tabla6su">+ 6</string>
    <string name="tabla7di">÷ 7</string>
    <string name="tabla7mu">X 7</string>
    <string name="tabla7re">– 7</string>
    <string name="tabla7su">+ 7</string>
    <string name="tabla8di">÷ 8</string>
    <string name="tabla8mu">X 8</string>
    <string name="tabla8re">– 8</string>
    <string name="tabla8su">+ 8</string>
    <string name="tabla9di">÷ 9</string>
    <string name="tabla9mu">X 9</string>
    <string name="tabla9re">– 9</string>
    <string name="tabla9su">+ 9</string>
    <string name="tablas1">Multiplication Tables</string>
    <string name="tablas2">Division Tables</string>
    <string name="tablas3">Addition Tables</string>
    <string name="tablas4">Subtraction Tables</string>
    <string name="tablasumar">ca-app-pub-2180509525133162/4240905738</string>
    <string name="textnotice">This app respect the privacy of children. We don\'t collect personal information from children with our app. Personalized ads, interest-based advertising, and remarketing are disabled as part of child-directed treatment. This app comply with the Children\'s Online Privacy and Protection Act (COPPA) and the EU General Data Protection Regulation (GDPR).</string>
    <string name="textofin">Great, you\'ve done very well, if you want you can continue learning now!</string>
    <string name="vale">I Agree</string>
    <string name="volverlastablas">The Tables</string>
    <string name="action_settings">Setting</string>
</resources>