<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/wallpappergames"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="8">

    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="normal|bold|italic"
        android:textColor="#fff"
        android:gravity="center"
        android:background="@drawable/buttonmenu"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/textofin"
        android:layout_weight="3" />

    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="normal|bold|italic"
        android:textColor="#fff"
        android:id="@+id/btnExamen1"
        android:background="@drawable/buttonmenu"
        android:padding="25dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/elegirjuego"
        android:layout_weight="1" />

    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="normal|bold|italic"
        android:textColor="#fff"
        android:gravity="center"
        android:id="@+id/btnExamen2"
        android:background="@drawable/buttonmenu"
        android:padding="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volverlastablas"
        android:layout_weight="1" />
</LinearLayout>
